--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-util": "^3.0.3",
     "gulp-webserver": "^0.9.0",
     "jshint-stylish": "^1.0.1",
+    "less-plugin-autoprefix": "^1.4.1",
     "run-sequence": "^1.0.2"
   }
 }
