--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "del": "^1.1.1",
+    "gh-pages": "^0.2.0",
     "gulp": "^3.8.11",
     "gulp-debug": "^2.0.0",
     "gulp-install": "^0.2.0",
