--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
-cache: npm
+cache:
+  directories:
+    - node_modules
+    - bower_components
 node_js:
 - '0.12'
 before_script:
