Automatically convert .svg's to .png's on deploy, clean up some javascript, remove old files

--- a/.jshintrc
+++ b/.jshintrc
@@ -9,5 +9,9 @@
   "jquery": true,
   "mocha": true,
   "trailing": true,
-  "noempty": true
+  "noempty": true,
+  "predef": [
+    "navigator",
+    "Modernizr"
+  ]
 }
