--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-less": "^3.0.2",
     "gulp-load-plugins": "^0.8.0",
     "gulp-minify-css": "^1.0.0",
+    "gulp-svg2png": "^0.3.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
     "gulp-webserver": "^0.9.0",
