--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "gh-pages": "^0.2.0",
     "gulp": "^3.8.11",
     "gulp-debug": "^2.0.0",
+    "gulp-favicons": "git://github.com/haydenbleasel/gulp-favicons#master",
     "gulp-install": "^0.2.0",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.10.0",
     "gulp-less": "^3.0.2",
     "gulp-load-plugins": "^0.8.0",
     "gulp-minify-css": "^1.0.0",
+    "gulp-replace": "^0.5.3",
+    "gulp-sourcemaps": "^1.5.1",
     "gulp-svg2png": "^0.3.0",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.3",
